# Clipstar

./: README.md  pyproject.toml  requirements-dev.txt
clipstar/: interface.py  main.py
tests/: test_interface.py  test_main.py
